<resources>
    <string name="app_name">E-Laundrie</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="data_pelanggan">Data Pelanggan</string>
    <string name="data_pelanggan2">Data Pelanggan</string>
    <string name="hai_selamat_datang">Hai,\nSelamat Datang !</string>
    <string name="hai_selamat_datang2">Hai, Selamat Datang !\nAdmin %1$s</string>
    <string name="e_laundrie">E-Laundrie</string>
    <string name="tentang_fragment">Tentang Aplikasi</string>
    <string name="tentang_naplikasi">Tentang Aplikasi</string>
    <string name="_8942">⋮</string>
    <string name="jumlah_1_s">Jumlah Laundry: %1$s</string>
    <string name="jumlah_laundry">Jumlah : %1$s Kg</string>
    <string name="gagal_lanjut">Proses dapat dilanjutkan setelah lampu indikator berwarna hijau.</string>
    <string-array name="item_status_pembayaran">
        <item>Lunas</item>
        <item>Belum Bayar</item>
    </string-array>
    <string-array name="item_layanan">
        <item>Flash 1 Hour</item>
        <item>Express 1 Day</item>
        <item>Regular 2 Day</item>
    </string-array>
    <string name="id_1_s">ID: %1$s</string>
    <string name="tambah_pelanggan">Tambah Data</string>
    <string name="alamat_pelanggan">Alamat Pelanggan</string>
    <string name="diskon">Diskon %</string>
    <string name="discount">Diskon %: </string>
    <string name="loading">Loading...</string>
    <string name="data_berhasil_ditambah">Data berhasil ditambah</string>
    <string name="data_gagal_ditambah">Data gagal ditambah</string>
    <string name="data_berhasil_diupdate">Data berhasil diupdate</string>
    <string name="data_gagal_diupdate">Data gagal diupdate</string>
    <string name="data_berhasil_dihapus">Data berhasil dihapus</string>
    <string name="data_gagal_dihapus">Data gagal dihapus</string>
    <string name="semua_data_berhasil_dihapus">Semua data berhasil dihapus</string>
    <string name="semua_data_gagal_dihapus">Semua data gagal dihapus</string>
    <string name="total_1s">Total: Rp.%1$s</string>
    <string name="poppins_regular">res/font/poppins_regular.ttf</string>
    <string name="utf_8">UTF-8</string>
    <string name="total">Total: </string>
    <string name="admin_elaundrie">Admin E-Laundrie</string>
    <string name="jumlah_kg">Jumlah/Kg</string>
    <string name="status_pembayaran">Status Pembayaran</string>
    <string name="payment_status">Status Pembayaran: </string>
    <string name="layanan">Layanan</string>
    <string name="service">Layanan: </string>
    <string name="update_data">Update Data</string>
    <string name="update_pelanggan">Update Pelanggan</string>
    <string name="_1_hour_laundry">1 Hour Laundry</string>
    <string name="nama">Nama</string>
    <string name="name">Nama: </string>
    <string name="alamat">Alamat</string>
    <string name="address">Alamat: </string>
    <string name="elaundrie">E-Laundrie</string>
    <string name="tv_jumlah_laundry">Jumlah/Kg</string>
    <string name="jumlah_kg_laundry">Jumlah/Kg: </string>
    <string name="tv_id">ID: %1$s</string>
    <string name="channel_name">Cek Customer</string>
    <string name="channel_desc">Cek Customer Yang Belum Bayar</string>
    <string name="title">E-Laundrie Bot</string>
    <string name="jangan_lupa_cek">Haloo.. Jangan lupa cek customer yang belum bayar yah !</string>
    <string name="tv_nama">: %1$s</string>
    <string name="tv_alamat">: %1$s</string>
    <string name="tv_jumlah">: %1$s Kg</string>
    <string name="tv_diskon">: %1$s</string>
    <string name="tidak_ada_koneksi_internet">Tidak ada koneksi internet !</string>
    <string name="tv_layanan">: %1$s</string>
    <string name="tv_status">: %1$s</string>
    <string name="tv_total">: Rp.%1$s</string>
    <string name="send_template">E-Laundrie\n\nTanggal: %1$s\nID: %2$s\nNama: %3$s\nAlamat: %4$s\nJumlah: %5$s\nDiskon: %6$s\nLayanan: %7$s\nStatus: %8$s\nTotal: %9$s</string>
    <string name="action_switch_layout">Action Switch Layout</string>
    <string name="nama_1_s">Nama: %1$s</string>
    <string name="pilih_layanan">Pilih layanan</string>
    <string name="validasi_nama">Nama tidak boleh kosong !</string>
    <string name="validasi_jumlah">Jumlah tidak boleh kosong !</string>
    <string name="validasi_diskon">Diskon tidak boleh kosong !</string>
    <string name="validasi_alamat">Alamat tidak boleh kosong !</string>
    <string name="validasi_status_bayar">Status pembayaran tidak boleh kosong !</string>
    <string name="validasi_layanan">Layanan tidak boleh kosong !</string>


</resources>