<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:nestedScrollingEnabled="false"
    app:behavior_hideable="false"
    app:behavior_peekHeight="650dp"
    app:layout_anchorGravity="bottom"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btnClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_close_icon" />

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbarThumbVertical="@null"
                android:scrollbarTrackVertical="@null">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/tambah_pelanggan"
                        android:textSize="32sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittext_bg"
                        android:clipToPadding="false"
                        android:minHeight="64dp"
                        android:paddingTop="10dp"
                        android:textColorHint="?android:textColorHint"
                        app:boxBackgroundMode="none"
                        app:hintTextColor="?android:textColorHint">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/etNama"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:digits=" abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                            android:hint="Isi Nama"
                            android:inputType="text"
                            android:paddingStart="16dp"
                            android:paddingTop="5dp"
                            android:paddingEnd="16dp"
                            android:textSize="20sp" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/edittext_bg"
                        android:clipToPadding="false"
                        android:minHeight="64dp"
                        android:paddingTop="10dp"
                        android:textColorHint="?android:textColorHint"
                        app:boxBackgroundMode="none"
                        app:hintTextColor="?android:textColorHint">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/etJumlah"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:digits=" abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                            android:hint="@string/jumlah_kg"
                            android:inputType="text"
                            android:paddingStart="16dp"
                            android:paddingTop="5dp"
                            android:paddingEnd="16dp"
                            android:textSize="20sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/edittext_bg"
                        android:clipToPadding="false"
                        android:minHeight="64dp"
                        android:paddingTop="10dp"
                        android:textColorHint="?android:textColorHint"
                        app:boxBackgroundMode="none"
                        app:hintTextColor="?android:textColorHint">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/etDiskon"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:digits=" abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                            android:hint="@string/diskon"
                            android:inputType="text"
                            android:paddingStart="16dp"
                            android:paddingTop="5dp"
                            android:paddingEnd="16dp"
                            android:textSize="20sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/edittext_bg"
                        android:clipToPadding="false"
                        android:minHeight="64dp"
                        android:paddingTop="10dp"
                        android:textColorHint="?android:textColorHint"
                        app:boxBackgroundMode="none"
                        app:hintTextColor="?android:textColorHint">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/etAlamat"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:digits=" abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                            android:hint="@string/alamat_pelanggan"
                            android:inputType="text"
                            android:paddingStart="16dp"
                            android:paddingTop="5dp"
                            android:paddingEnd="16dp"
                            android:textSize="20sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/edittext_bg"
                        android:minHeight="64dp"
                        android:textColorHint="?android:textColorHint"
                        app:boxBackgroundMode="none"
                        app:hintAnimationEnabled="false"
                        app:hintEnabled="true"
                        app:hintTextColor="?android:textColorHint">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="false"
                            android:focusable="false"
                            android:paddingTop="-20dp"
                            android:paddingBottom="-20dp"
                            android:textColor="?android:textColorHint"
                            android:textSize="12sp" />

                        <com.skydoves.powerspinner.PowerSpinnerView
                            android:id="@+id/spinnerStatus"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:fontFamily="@font/poppins_regular"
                            android:gravity="start|center_vertical"
                            android:hint="@string/status_pembayaran"
                            android:includeFontPadding="false"
                            android:minHeight="30dp"
                            android:paddingStart="16dp"
                            android:paddingEnd="10dp"
                            android:textColorHint="?android:textColorHint"
                            android:textSize="20sp"
                            app:spinner_arrow_animate="true"
                            app:spinner_arrow_gravity="end"
                            app:spinner_arrow_show="true"
                            app:spinner_arrow_tint="@color/black"
                            app:spinner_divider_color="@android:color/transparent"
                            app:spinner_divider_show="true"
                            app:spinner_divider_size="10dp"
                            app:spinner_item_array="@array/item_status_pembayaran"
                            app:spinner_popup_animation="dropdown"
                            app:spinner_popup_background="@drawable/spinner_bg"
                            app:spinner_popup_elevation="1dp"
                            app:spinner_popup_height="85dp" />


                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/edittext_bg"
                        android:clipToPadding="false"
                        android:minHeight="64dp"
                        android:paddingTop="10dp"
                        android:textColorHint="?android:textColorHint"
                        app:boxBackgroundMode="none"
                        app:hintEnabled="true"
                        app:hintTextColor="?android:textColorHint">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/etLayanan"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:clickable="false"
                            android:focusable="false"
                            android:hint="@string/layanan"
                            android:inputType="text"
                            android:paddingStart="16dp"
                            android:paddingTop="5dp"
                            android:paddingEnd="16dp"
                            android:text="FLASH 1 HOUR"
                            android:textSize="20sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnTambah"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:minHeight="64dp"
                        android:text="@string/tambah_pelanggan"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        app:strokeColor="@color/black" />
                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.core.widget.NestedScrollView>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>



